use ProcessBuilder for running cat command